version/1.0/_sources/examples/workflow_creation/index.rst.txt


.. _sphx_glr_examples_workflow_creation:

Create workflow
---------------

These examples demonstrate how to create workflow using pyOptiSLang.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to to create an ARSM ten bar truss flow in batch mode using pyOptiSLang.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_01_ten_bar_truss_thumb.png
    :alt:

  :ref:`sphx_glr_examples_workflow_creation_01_ten_bar_truss.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ten bar truss</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and run a direct optimization.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_02_3_oscillator_optimization_on_EA_thumb.png
    :alt:

  :ref:`sphx_glr_examples_workflow_creation_02_3_oscillator_optimization_on_EA.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillator optimization using EA flow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to obtain designs from parametric system and process them externally.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_03_proxy_solver_thumb.png
    :alt:

  :ref:`sphx_glr_examples_workflow_creation_03_proxy_solver.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Proxy solver</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create robust design optimization workflow.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_04_1_rdo_python_thumb.png
    :alt:

  :ref:`sphx_glr_examples_workflow_creation_04_1_rdo_python.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Robust design optimization with python solver</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create robust design optimization workflow.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_04_2_rdo_proxy_solver_thumb.png
    :alt:

  :ref:`sphx_glr_examples_workflow_creation_04_2_rdo_proxy_solver.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Robust design with optimization with proxy solver</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/workflow_creation/01_ten_bar_truss
   /examples/workflow_creation/02_3_oscillator_optimization_on_EA
   /examples/workflow_creation/03_proxy_solver
   /examples/workflow_creation/04_1_rdo_python
   /examples/workflow_creation/04_2_rdo_proxy_solver

