version/1.5/_sources/examples/workflow_creation/index.rst.txt


.. _sphx_glr_examples_workflow_creation:

Create workflow
---------------

These examples demonstrate how to create workflow using pyOptiSLang.


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to to create an ARSM ten bar truss flow in batch mode using pyOptiSLang.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_01_ten_bar_truss_thumb.png
    :alt:

  :doc:`/examples/workflow_creation/01_ten_bar_truss`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ten bar truss</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and run a direct optimization.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_02_3_oscillator_optimization_on_EA_thumb.png
    :alt:

  :doc:`/examples/workflow_creation/02_3_oscillator_optimization_on_EA`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillator optimization using EA flow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to obtain designs from a parametric system and process them externally.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_03_1_proxy_solver_sensitivity_thumb.png
    :alt:

  :doc:`/examples/workflow_creation/03_1_proxy_solver_sensitivity`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Proxy solver with Sensitivity</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to obtain designs from a parametric system and process them externally.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_03_2_proxy_solver_amop_thumb.png
    :alt:

  :doc:`/examples/workflow_creation/03_2_proxy_solver_amop`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Proxy solver with AMOP</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to obtain designs from a parametric system and process them externally.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_03_3_proxy_solver_oco_thumb.png
    :alt:

  :doc:`/examples/workflow_creation/03_3_proxy_solver_oco`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Proxy solver with OCO</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create robust design optimization workflow.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_04_1_rdo_python_thumb.png
    :alt:

  :doc:`/examples/workflow_creation/04_1_rdo_python`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Robust design optimization with python solver</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create robust design optimization workflow.">

.. only:: html

  .. image:: /examples/workflow_creation/images/thumb/sphx_glr_04_2_rdo_proxy_solver_thumb.png
    :alt:

  :doc:`/examples/workflow_creation/04_2_rdo_proxy_solver`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Robust design with optimization with proxy solver</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/workflow_creation/01_ten_bar_truss
   /examples/workflow_creation/02_3_oscillator_optimization_on_EA
   /examples/workflow_creation/03_1_proxy_solver_sensitivity
   /examples/workflow_creation/03_2_proxy_solver_amop
   /examples/workflow_creation/03_3_proxy_solver_oco
   /examples/workflow_creation/04_1_rdo_python
   /examples/workflow_creation/04_2_rdo_proxy_solver

